--- a/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/en.lproj/MainStoryboard.storyboard
+++ b/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="psK-nZ-vZC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="psK-nZ-vZC">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -192,7 +192,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="fnN-2y-K5g" kind="modal" id="F2y-Kx-KJv"/>
+                                    <segue destination="fnN-2y-K5g" kind="modal" id="09h-6u-wyh"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -203,14 +203,26 @@
             </objects>
             <point key="canvasLocation" x="1172" y="-748"/>
         </scene>
-        <!--View Controller-->
+        <!--New Egg View Controller-->
         <scene sceneID="qBz-sx-jA3">
             <objects>
-                <viewController id="fnN-2y-K5g" sceneMemberID="viewController">
+                <viewController id="fnN-2y-K5g" customClass="NewEggViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YR5-BA-ddd">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="SparkleShine.png" id="7Ry-vV-nLN">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="SparkleShine-overlay.png" id="l5l-oy-cwb" customClass="SparkleImageView">
+                                <rect key="frame" x="-166" y="-54" width="652" height="652"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="firstEgg.png" id="ZM0-r6-P6o">
+                                <rect key="frame" x="55" y="199" width="209" height="146"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Congrats!                  " lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dXN-xR-wOy">
                                 <rect key="frame" x="114" y="42" width="172" height="54"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -232,10 +244,6 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView contentMode="scaleToFill" image="egg_still.png" id="VN2-FU-ea3">
-                                <rect key="frame" x="34" y="173" width="235" height="203"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Timed graphic here of EGG shining!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2cf-em-9cf">
                                 <rect key="frame" x="20" y="426" width="330" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -268,6 +276,9 @@
                         </subviews>
                         <color key="backgroundColor" red="0.95178817400000004" green="0.96384113049999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="shineRays" destination="l5l-oy-cwb" id="9S6-IB-2uy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vPW-ON-XsJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -656,12 +667,24 @@
         </scene>
     </scenes>
     <resources>
+        <image name="SparkleShine-overlay.png" width="540" height="539"/>
+        <image name="SparkleShine.png" width="320" height="540"/>
         <image name="chinchilla.png" width="248" height="203"/>
         <image name="egg_still.png" width="400" height="224"/>
+        <image name="firstEgg.png" width="174" height="133"/>
     </resources>
     <classes>
+        <class className="NewEggViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NewEggViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="shineRays" candidateClass="SparkleImageView"/>
+            </relationships>
+        </class>
         <class className="ScrollView_Test" superclassName="UIScrollView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ScrollView_Test.h"/>
+        </class>
+        <class className="SparkleImageView" superclassName="UIImageView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SparkleImageView.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
