--- a/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/en.lproj/MainStoryboard.storyboard
+++ b/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/en.lproj/MainStoryboard.storyboard
@@ -128,10 +128,10 @@
             </objects>
             <point key="canvasLocation" x="783" y="-737"/>
         </scene>
-        <!--View Controller-->
+        <!--Project PickerVC-->
         <scene sceneID="BTe-D4-rSZ">
             <objects>
-                <viewController id="jjf-9H-Cbw" sceneMemberID="viewController">
+                <viewController id="jjf-9H-Cbw" customClass="ProjectPickerVC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="g7b-2Z-RiB">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -162,42 +162,34 @@
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6iv-ob-JpV">
-                                <rect key="frame" x="38" y="167" width="211" height="171"/>
+                                <rect key="frame" x="38" y="167" width="250" height="284"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="checkmark" indentationWidth="10" id="T6Y-aH-4aQ">
-                                        <rect key="frame" x="0.0" y="22" width="211" height="44"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="projectCell" id="T6Y-aH-4aQ">
+                                        <rect key="frame" x="0.0" y="22" width="250" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="191" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="230" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <connections>
+                                            <segue destination="fnN-2y-K5g" kind="modal" identifier="segueToFirstEgg" id="6yb-Gc-90c"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
+                                    <outlet property="dataSource" destination="jjf-9H-Cbw" id="Fud-4M-Y5j"/>
                                     <outlet property="delegate" destination="jjf-9H-Cbw" id="5I3-QC-ogj"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="c06-x9-qpD">
-                                <rect key="frame" x="25" y="127" width="236" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Read Book/ Write book report">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="fnN-2y-K5g" kind="modal" id="09h-6u-wyh"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.95178817400000004" green="0.96384113049999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="projectTypesTable" destination="6iv-ob-JpV" id="bzb-I1-TVh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KEa-W7-y7Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -276,6 +268,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.95178817400000004" green="0.96384113049999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="3vd-mK-5m2"/>
                     <connections>
                         <outlet property="shineRays" destination="l5l-oy-cwb" id="9S6-IB-2uy"/>
                     </connections>
@@ -673,20 +666,6 @@
         <image name="egg_still.png" width="400" height="224"/>
         <image name="firstEgg.png" width="174" height="133"/>
     </resources>
-    <classes>
-        <class className="NewEggViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NewEggViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="shineRays" candidateClass="SparkleImageView"/>
-            </relationships>
-        </class>
-        <class className="ScrollView_Test" superclassName="UIScrollView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScrollView_Test.h"/>
-        </class>
-        <class className="SparkleImageView" superclassName="UIImageView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SparkleImageView.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
